# vulkanism

./: .gitignore  Cargo.toml  README.md
demos/: Cargo.toml  build.rs
demos/src/: camera.rs  fs_tri.frag  fs_tri.vert  headless.rs  make_sequence.comp  obj.frag  obj.rs  obj.vert  text.rs  textured.frag  textured.rs  textured.vert  triangle.rs  triangle.vert
nobs-assets/: Cargo.toml
nobs-assets/src/: assets.rs  lib.rs  update.rs
nobs-assets/src/image/: bitmap.rs  mod.rs  targa.rs
nobs-assets/src/model/: mod.rs  wavefront.rs
nobs-assets/src/model/wavefront/: mod.rs  mtl.rs  obj.rs
nobs-imgui/: Cargo.toml  build.rs
nobs-imgui/nobs-imgui-font/: Cargo.toml
nobs-imgui/nobs-imgui-font/nobs-imgui-font-macro/: Cargo.toml
nobs-imgui/nobs-imgui-font/nobs-imgui-font-macro/src/: lib.rs
nobs-imgui/nobs-imgui-font/src/: font.rs  lib.rs  typeset.rs
nobs-imgui/nobs-imgui-fontaoenusth/: Cargo.toml
nobs-imgui/nobs-imgui-fontaoenusth/src/: lib.rs
nobs-imgui/src/: cachedpipeline.rs  font.rs  imgui.rs  input.rs  lib.rs  pipeid.rs  pipelines.rs  rect.rs  select.rs  sizebounds.rs  window.rs
nobs-imgui/src/component/: component.rs  mod.rs  size.rs  spacer.rs  stream.rs  textbox.rs
nobs-imgui/src/component/components/: mod.rs  spacer.rs  textbox.rs
nobs-imgui/src/components/: mod.rs  spacer.rs  textbox.rs
nobs-imgui/src/select/: mod.rs  select.rs  selectpass.rs
nobs-imgui/src/select/rect/: mod.rs  pipeline.rs  rect.vert
nobs-imgui/src/select/rects/: mod.rs  pipeline.rs  rects.frag
nobs-imgui/src/shell/: command.rs  context.rs  mod.rs  shell.rs  terminal.rs  terminalwnd.rs
nobs-imgui/src/shell/arg/: bool.rs  file.rs  ident.rs  mod.rs  num.rs
nobs-imgui/src/shell/command/: help.rs  mod.rs  source.rs  spawn.rs
nobs-imgui/src/shell/command/args/: bool.rs  commandname.rs  file.rs  flag.rs  ident.rs  matches.rs  mod.rs  num.rs  text.rs
nobs-imgui/src/shell/terminal/: complete.rs  history.rs  mod.rs  show.rs  window.rs
nobs-imgui/src/sprite/: mod.rs  pipeline.rs  sprite.frag
nobs-imgui/src/sprites/: mod.rs  pipeline.rs  sprites.frag  sprites.rs  text.rs
nobs-imgui/src/style/: mod.rs
nobs-imgui/src/style/empty/: mod.rs
nobs-imgui/src/style/fancy/: mod.rs
nobs-imgui/src/style/simple/: mod.rs  simplecomponent.rs
nobs-imgui/src/style/simple/pipeline/: border.rs  borderless.rs  color.frag  color.rs  color.vert  mod.rs  prelude.glsl  select.frag  select.rs  select.vert  selectborderless.rs  simple.frag  simple.vert
nobs-imgui/src/terminal/: command.rs  mod.rs  parsable.rs  shell.rs  terminal.rs
nobs-imgui/src/text/: mod.rs  pipeline.rs  text.frag  text.vert
nobs-imgui/src/textbox/: mod.rs
nobs-imgui/src/window/: component.rs  layout.rs  mod.rs  root.rs  screen.rs  size.rs  window.rs
nobs-vk/: Cargo.toml  README.md
nobs-vk/examples/: fancy.rs  info.rs
nobs-vk/generate/: basetype.py  commands.py  decl.py  enum.py  exttypes.py  features.py  funcptr.py  generate.py  handle.py  struct.py  typeid.py
nobs-vk/src/: builder.rs  instance.rs  lib.rs
nobs-vk/src/device/: device.rs  mod.rs  physical_device.rs
nobs-vkcmd/: Cargo.toml
nobs-vkcmd/src/: lib.rs  pool.rs  stream.rs
nobs-vkfb/: Cargo.toml
nobs-vkmath/: Cargo.toml  README.md  rustfmt.toml
nobs-vkmath/src/: lib.rs  mat3.rs  mat4.rs  vec2.rs  vec3.rs  vec4.rs
nobs-vkmath/src/common_traits/: mod.rs
nobs-vkmem/: Cargo.toml  README.md
nobs-vkmem/examples/: main.rs
nobs-vkmem/src/: allocator.rs  bindinfo.rs  bindtype.rs  block.rs  builder.rs  handle.rs  lib.rs  managedresources.rs  mapped.rs  memtype.rs  page.rs  table.rs  trash.rs  unused.rs
nobs-vkpipes/: Cargo.toml  README.md
nobs-vkpipes/nobs-vkpipes-macro/: Cargo.toml
nobs-vkpipes/nobs-vkpipes-macro/src/: binding.rs  enums.rs  lib.rs  parse.rs  pipeline.rs  shader.rs  spirv.rs  usings.rs
nobs-vkpipes/src/: lib.rs
nobs-vkpipes/src/cache/: cache.rs  mod.rs  pipeline.rs
nobs-vkpipes/src/descriptor/: layout.rs  mod.rs  pool.rs  poolsizes.rs  sizes.rs  writes.rs
nobs-vkpipes/src/pipeline/: mod.rs
nobs-vkpipes/src/pipeline/builder/: compute.rs  mod.rs
nobs-vkpipes/src/pipeline/builder/graphics/: blend.rs  depth_stencil.rs  dynamic.rs  input_assembly.rs  mod.rs  multisample.rs  raster.rs  tesselation.rs  vertex_input.rs  viewport.rs
nobs-vkwnd/: Cargo.toml
nobs-vkwnd/src/: lib.rs  swapchain.rs
nobs-vulkanism/: Cargo.toml  README.md
nobs-vulkanism-headless/: Cargo.toml  README.md
nobs-vulkanism-headless/src/: lib.rs
nobs-vulkanism-headless/src/cmd/: batch.rs  buffer.rs  mod.rs  pool.rs  stream.rs  streampush.rs
nobs-vulkanism-headless/src/cmd/commands/: barrier.rs  blit.rs  copy.rs  dispatch.rs  draw.rs  framebuffer.rs  mod.rs  pipeline.rs  renderpass.rs
nobs-vulkanism-headless/src/cmd/commands/draw/: bindvertexbuffer.rs  draw.rs  indexed.rs  indirect.rs  mod.rs  vertices.rs
nobs-vulkanism-headless/src/fb/: framebuffer.rs  mod.rs  renderpass.rs
nobs-vulkanism-headless/src/mem/: mod.rs  staging.rs
nobs-vulkanism-headless/src/pass/: drawpass.rs  frame.rs  framebuffer.rs  mod.rs  pass.rs  renderpass.rs
nobs-vulkanism-headless/src/util/: builder.rs
nobs-vulkanism-headless/src/util/builder/: clearvalue.rs  extent.rs  imageview.rs  mod.rs  offset.rs  rect.rs  sampler.rs  subresource.rs
nobs-vulkanism/src/: lib.rs
nobs-vulkanism/src/frame/: frame.rs  mod.rs  pass.rs
nobs-vulkanism/src/frame/drawpass/: drawpass.rs  meshes.rs  mod.rs
nobs-vulkanism/src/wnd/: mod.rs  present.rs  swapchain.rs  window.rs
