[package]
name = "demos"
version = "0.1.0"
authors = ["dopitz <daniel.opitz@kit.edu>"]
edition = "2018"
publish = false

[dependencies]
nobs-vulkanism = {version = "0.1.0", path = "../nobs-vulkanism"}
nobs-imgui = {version = "0.1.0", path = "../nobs-imgui"}
cgmath = {version = "0.17.0"}
nobs-vkmath = {version = "0.1.0", path = "../nobs-vkmath"}

[build-dependencies]
nobs-vulkanism = {version = "0.1.0", path = "../nobs-vulkanism"}

[[bin]]
name = "headless"
path = "src/headless.rs"

[[bin]]
name = "triangle"
path = "src/triangle.rs"

[[bin]]
name = "textured"
path = "src/textured.rs"

[[bin]]
name = "text"
path = "src/text.rs"
