[package]
name = "nobs-vkcmd"
version = "0.1.0"
authors = ["Daniel Opitz <danielopitz91@gmail.com>"]
description = "vulkan command buffer managing and synchronisation for nobs-vk"
license = "MIT"
keywords = ["vulkan", "memory", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]
repository = "https://github.com/dopitz/vulkanism/nobs-vkcmd"
readme = "README.md"
edition = "2018"

[dependencies]
nobs-vk = {version="0.2.0", path="../nobs-vk"}

[dev-dependencies]
nobs-vulkanism = {version="0.1.0", path="../nobs-vulkanism"}
