[package]
name = "nobs-vkfb"
version = "0.1.0"
authors = ["Daniel Opitz <danielopitz91@gmail.com>"]
description = "vulkan framebuffer and renderpass extension for nobs-vk"
license = "MIT"
keywords = ["vulkan", "memory", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]
repository = "https://github.com/dopitz/vulkanism/nobs-vkmem"
readme = "README.md"
edition = "2018"

[dependencies]
nobs-vk = {version="0.2.0", path="../nobs-vk"}
