[package]
name = "nobs-vkmem"
version = "0.2.0"
authors = ["Daniel Opitz <danielopitz91@gmail.com>"]
description = "vulkan memory management extension for nobs-vk"
license = "MIT"
keywords = ["vulkan", "memory", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]
repository = "https://github.com/dopitz/vulkanism/nobs-vkmem"
readme = "README.md"
edition = "2018"

[dependencies]
nobs-vk = {version="0.2.0", path="../nobs-vk"}

[[example]]
name = "mem"
path = "examples/main.rs"
