[package]
name = "nobs-vkwnd"
version = "0.1.0"
authors = ["Daniel Opitz <danielopitz91@gmail.com>"]
description = "window, surface and swapchain as extension to nobs-vk"
license = "MIT"
keywords = ["vulkan", "ffi", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]
repository = "https://github.com/dopitz/vulkanism/nobs-vkpipes"
readme = "README.md"
edition = "2018"

[dependencies]
nobs-vk = {version = "0.2.0", path = "../nobs-vk"}
nobs-vkcmd = {version = "0.1.0", path = "../nobs-vkcmd"}
winit = "0.18.1"

[dev-dependencies]
nobs-vulkanism = {version = "0.1.0", path = "../nobs-vulkanism"}
