[package]
name = "nobs-vulkanism"
version = "0.1.0"
authors = ["Daniel Opitz <danielopitz91@gmail.com>"]
description = "Compilation of vulkanism modules needed for rendering to a window"
license = "MIT"
keywords = ["vulkan", "ffi", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]
repository = "https://github.com/dopitz/vulkanism/nobs-vulkanism"
readme = "README.md"
edition = "2018"

[dependencies]
nobs-vk = {version = "0.2.0", path = "../nobs-vk"}
nobs-vkcmd = {version = "0.1.0", path = "../nobs-vkcmd"}
nobs-vkmem = {version = "0.2.0", path = "../nobs-vkmem"}
nobs-vkpipes = {version = "0.1.0", path = "../nobs-vkpipes"}
nobs-vkwnd = {version = "0.1.0", path = "../nobs-vkwnd"}
