[package]
name = "nobs-vulkanism"
version = "0.1.0"
authors = ["Daniel Opitz <danielopitz91@gmail.com>"]
description = "vulkan for rendering to a window"
license = "MIT"
keywords = ["vulkan", "ffi", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]
repository = "https://github.com/dopitz/vulkanism/nobs-vulkanism"
readme = "README.md"
edition = "2018"

[dependencies]
nobs-vulkanism-headless = {version = "0.1.0", path = "../nobs-vulkanism-headless"}
winit = "0.19.3"
