[package]
name = "nobs-imgui-font"
version = "0.1.0"
authors = ["Daniel Opitz <danielopitz91@gmail.com>"]
description = "immediate gui font generator macro"
license = "MIT"
keywords = ["vulkan", "gui", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]
repository = "https://github.com/dopitz/vulkanism/nobs-imgui/nobs-imgui-font"
readme = "README.md"
edition = "2018"

[lib]
proc_macro = true

[dependencies]
